@@ -11,6 +11,9 @@ Release 2.7.6 - UNRELEASED
     HDFS-11003. Expose XmitsInProgress through DataNodeMXBean.
     (Brahma Reddy Battula)
 
+    HADOOP-15212. Add independent secret manager method for logging expired
+    tokens. (Daryn Sharp via kihwal)
+
   OPTIMIZATIONS
 
   BUG FIXES
